hello world react

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" type="text/css" href="#">
 </head>
 <body>
+  <div id="root"></div>
   <form>
     <label>Campground name </label><input type="text">
     <button>Search</button>
